# swc-plugin-import-jsx-pragma

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  swc_plugin_import_jsx_pragma.wasm
.github/workflows/: build-test.yml
src/: lib.rs
test/: test.mjs
test/fixtures/commonjs/: input.js  output.js
test/fixtures/commonjs-custom-import-source/: config.json  input.jsx  output.js
test/fixtures/custom-import-source/: input.tsx  output.js
test/fixtures/fragment/: output.js
test/fixtures/simple/: output.js
